[package]
name = "rust_temporal"
version = "0.1.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper/rust_temporal"
license = "ISC"
description = "Temporal API for working with date-times."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
browser_support = []
